# metadef

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  OWNERS  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  blacklist.txt  build.sh  build_third_party.sh  classify_rule.txt  classify_rule.yaml  install_newest_packages.sh  prepare_dev_env.sh  version.cmake  version.info
.claude/skills/pre-commit-check/: SKILL.md
.gitcode/: PULL_REQUEST_TEMPLATE.en-US.md
base/: CMakeLists.txt  any_value.cc  device.cmake  host.cmake
base/asc/: tilingdata_base_impl.cc
base/asc/opcheck/: op_check.cc  op_check_register_impl.cc
base/asc/opdef/: op_config_registry.cc  op_config_registry_impl.cc  op_def.cc  op_def_aicore.cc  op_def_aicpu.cc  op_def_attr.cc  op_def_factory.cc  op_def_factory_impl.cc  op_def_hostcpu.cc  op_def_impl.cc  op_def_mc2.cc  op_def_param.cc
base/common/plugin/: plugin_manager.cc
base/context_builder/: context_holder.cc  context_holder_builder.h  op_context_builder_base.cc  op_context_builder_impl.cc  op_context_builder_impl.h  op_infer_datatype_context_builder.cc  op_infer_shape_context_builder.cc  op_infer_shape_range_context_builder.cc  op_info.h  op_kernel_run_context_builder.cc  op_tiling_context_builder.cc  op_tiling_parse_context_builder.cc
base/device_registry/: device_op_impl_registry.cpp  device_op_impl_registry_impl.h  tiling_aicpu_task.h  tiling_device_kernel.cpp  tiling_device_kernel.h
base/registry/: op_bin_info.cc  op_bin_info_utils.h  op_ct_impl_registry.cc  op_impl_functions.cc  op_impl_register_v2_impl.cc  op_impl_register_v2_impl.h  op_impl_registry.cc  op_impl_registry_holder_manager.cc  op_impl_space_registry.cc  op_impl_space_registry_v2.cc  op_impl_space_registry_v2_impl.cc  op_impl_space_registry_v2_impl.h  opp_package_utils.cc  opp_so_manager.cc
base/runtime/: compute_node_info.cc  op_execute_context.cc  runtime_attrs.cc  tiling_data.cc
base/type/: ascend_string_impl.cc  types_impl.cc
base/utils/: aligned_ptr.cc  file_utils.cc  type_utils_impl.cc
cmake/: common_funcs.cmake  fetch_cann_cmake.cmake  gen_version_headers.cmake  intf_pub_linux.cmake  llvm_toolchain.cmake  makeself.cmake  package.cmake
cmake/device/: CMakeLists.txt
cmake/modules/: Finderror_manager.cmake  Findplatform.cmake  Findunified_dlog.cmake
cmake/modules/sub_module/: Findmmpa.cmake  Findruntime.cmake  Findslog.cmake
cmake/toolchain/: aarch64-hcc-toolchain.cmake
docs/: Doxyfile  attrs.md  attrs_en.md  build.md  build_en.md  offline_compile.md  offline_compile_en.md  precommit_guide.md  precommit_guide_en.md  quick_install.md  quick_install_en.md
docs/api/: Add.md  AddAutoMappingSubgraphIOIndexFunc.md  AddCount.md  AddOverflow.md  Allocator.md  Allocator构造函数和析构函数.md  AnchorInstanceInfo.md  Append.md  AppendAttr.md  AppendConvertedAttrVal.md  AppendDim.md  AppendStride.md  AscendString.md  AscendStringToDataType.md  AscendStringToFormat.md  AscendString构造函数和析构函数.md  AutoMappingByOpFn.md  AutoMappingByOpFnDynamic.md  AutoMappingFn.md  AutoMappingFnDynamic.md  AutoMappingSubgraphIOIndexFuncRegister.md  AutoMappingSubgraphIndex.md  Build-42.md  Build-45.md  Build-49.md  Build-52.md  Build-57.md  Build.md  C_DataType.md  C_Format.md  CalcOpParam.md  CalcSize.md  CalcTotalSize.md  CheckSupport.md  Clone.md  Compat.md  CompileInfo.md  CompileTimeTensorDesc.md  CompiledInfo.md  CompiledJson.md  (+616 more)
error_manager/: CMakeLists.txt  OWNERS  error_code.json  error_manager.cc
error_manager/stub/: Makefile  gen_stubapi.py
example/: run_example.sh
example/tc_ge_irrun_open_api_0014/: Makefile  tc_ge_irrun_open_api_0014.cpp
inc/: CMakeLists.txt
inc/base/attr/: attrs_to_buffer.h
inc/base/type/: types_impl.h
inc/common/ge_common/: inner_error_codes.h  string_util.h  util.h
inc/common/ge_common/debug/: log.h
inc/common/plugin/: plugin_manager.h
inc/common/util/: mem_utils.h
inc/common/util/compress/: compress_weight.h
inc/common/util/error_manager/: error_manager.h
inc/exe_graph/runtime/: gert_mem_block.h  gert_tensor_data.h
inc/graph/: aligned_ptr.h
inc/graph/debug/: ge_log.h  ge_util.h
inc/graph/utils/: file_utils.h
inc/register/: op_impl_registry_api.h  op_impl_registry_base.h  op_impl_registry_holder_manager.h  op_impl_space_registry.h  opp_impl_version.h  opp_so_manager.h
pkg_inc/base/: err_mgr.h
pkg_inc/base/asc/: tilingdata_base_impl.h
pkg_inc/common/: checker.h
pkg_inc/graph/: any_value.h  def_types.h  graph_type_utils.h  op_so_bin.h  type_id.h  type_utils.h
scripts/: check_env.sh  download_third_party_source.sh  init_env.sh  oat_check.sh  prepare_third_party.sh
scripts/package/: package.py
tests/: CMakeLists.txt  run_test.sh
tests/depends/mmpa/: CMakeLists.txt
tests/depends/mmpa/src/: mmpa_stub.cc  mmpa_stub.h
tests/stub/: gen_stubapi.py
tests/ut/: CMakeLists.txt
tests/ut/base/: CMakeLists.txt
tests/ut/base/testcase/: abi_compatibility_for_exe_graph_unittest.cc  any_value_ut.cc  ascend_string_unittest.cc  context_builder_unittest.cc  file_utils_unittest.cc  func_counter.cc  func_counter.h  kernel_context_unittest.cc  op_execute_context_unittest.cc  opp_package_utils_unittest.cc  plugin_manager_unittest.cc  stride_unittest.cc  tensor_unittest.cc  test_structs.h  tiling_data_unittest.cc  type_utils_unittest.cc  types_unittest.cc
tests/ut/exe_meta_device/: CMakeLists.txt  main.cc
tests/ut/register/: CMakeLists.txt
tests/ut/register/testcase/: abi_compatibility_for_register_unittest.cc  op_bin_info_unittest.cc  op_check_unittest.cc  op_ct_impl_registry_unittest.cc  op_def_aicore_unittest.cc  op_def_attr_unittest.cc  op_def_factory_unittest.cc  op_def_param_unittest.cc  op_def_unittest.cc  op_impl_registry_holder_manager_unittest.cc  op_impl_registry_unittest.cc  op_impl_space_registry_unittest.cc  op_impl_space_registry_v2_unittest.cc  opp_so_manager_unittest.cc  tiling_register_unittest.cc
tests/ut/sc_check/: CMakeLists.txt
tests/ut/sc_check/testcase/: sc_check_unittest.cc
(+72 files in other folders)
